--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
-	"search.exclude": {
-		"**/.yarn": true,
-		"**/.pnp.*": true
-	},
-	"typescript.enablePromptUseWorkspaceTsdk": true,
-	"editor.formatOnSave": true,
-	"typescript.tsdk": ".yarn/sdks/typescript/lib",
-	"editor.tabSize": 2
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  },
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "editor.formatOnSave": true,
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
+  "editor.tabSize": 2,
+  "editor.defaultFormatter": "biomejs.biome"
 }
