--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20.17.24",
+    "@types/terminal-kit": "^2.5.7",
     "ase-parser": "^0.0.18",
     "better-sqlite3": "^11.9.0",
     "gl-matrix": "^3.4.3",
     "nodemon": "^3.1.9",
     "pino": "^9.6.0",
+    "terminal-kit": "^3.1.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "vitest": "^3.0.8"
