WIP attack calcs

--- a/biome.json
+++ b/biome.json
@@ -1,9 +1,16 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-	"files": {
-		"ignore": ["node_modules", ".yarn", ".pnp.*"]
-	},
-	"formatter": {
-		"indentStyle": "space"
-	}
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "files": {
+    "ignore": ["node_modules", ".yarn", ".pnp.*"]
+  },
+  "formatter": {
+    "indentStyle": "space"
+  },
+  "linter": {
+    "rules": {
+      "complexity": {
+        "useArrowFunction": "off"
+      }
+    }
+  }
 }
