--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   },
   "dependencies": {
     "@types/better-sqlite3": "^7.6.12",
-    "@types/node": "^20.17.24",
+    "@types/node": "^20.17.25",
     "@types/terminal-kit": "^2.5.7",
+    "@vitest/coverage-v8": "^3.0.9",
     "ase-parser": "^0.0.18",
-    "better-sqlite3": "^11.9.0",
+    "better-sqlite3": "^11.9.1",
     "gl-matrix": "^3.4.3",
     "nodemon": "^3.1.9",
     "pino": "^9.6.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.9"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
